Refactor data processing to use shifted long-based formats
Replaced `MinuteData` with `ShiftedMinuteData` for consistency and improved precision with long-based numerical handling. Added methods to align ATR calculation and timestamp processing to the new format. Introduced `BitcoinLongDataReader` for file parsing and optimized sliding window operations.